Added initial server side code

--- a/pages/index.html
+++ b/pages/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Emoji Maker</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/resources/index.css" />
   </head>
 
   <body>
@@ -235,6 +235,6 @@
         <div class="component-container"></div>
       </section>
     </main>
-    <script src="app.js"></script>
+    <script src="resources/index.js"></script>
   </body>
 </html>
