Restructured server files and made ui server driven.

--- a/pages/sign-in.html
+++ b/pages/sign-in.html
@@ -11,8 +11,6 @@
       <div class="menu">
         <div>
           <a href="/">Maker</a>
-          <a href="/browser">Browser</a>
-          <a href="/component">Component</a>
         </div>
         <div id="sign-in-section"></div>
       </div>
@@ -48,6 +46,6 @@
         <button type="submit">Sign Up</button>
       </form>
     </main>
-    <script src="resources/sign-in.js"></script>
+    <script src="resources/scripts/sign-in.js"></script>
   </body>
 </html>
