Added commenting support.

--- a/pages/404.html
+++ b/pages/404.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Emojitar | Not Found</title>
+    <link rel="stylesheet" href="/resources/index.css" />
     <!-- 
       HTML content borrowed from: https://codepen.io/genarocolusso/pen/XWbGMLp
       Just to make a nice looking 404 page.
@@ -109,6 +110,14 @@
     </style>
   </head>
   <body>
+    <nav>
+      <div class="menu">
+        <div>
+          <a href="/">Maker</a>
+        </div>
+        <div id="sign-in-section"></div>
+      </div>
+    </nav>
     <div class="main">
       <svg
         xmlns="http://www.w3.org/2000/svg"
@@ -230,5 +239,6 @@
         </g>
       </svg>
     </div>
+    <script src="resources/scripts/sign-in.js"></script>
   </body>
 </html>
