--- a/pages/index.html
+++ b/pages/index.html
@@ -15,9 +15,25 @@
 
       .browser-grid {
         display: grid;
-        grid-template-columns: auto auto auto auto;
+        grid-template-columns: auto auto auto auto auto;
         gap: 20px;
         margin: 20px;
+      }
+
+      .browser-item {
+        cursor: pointer;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: fit-content;
+        border: 1px solid black;
+        padding: 8px;
+        border-radius: 5px;
+        transition: background-color 200ms ease-in-out;
+      }
+
+      .browser-item:hover {
+        background-color: aqua;
       }
 
       .canvas-container {
@@ -57,6 +73,18 @@
       .emojie-part:hover {
         background-color: aliceblue;
       }
+
+      .filters-header {
+        text-align: center;
+      }
+
+      .filters {
+        margin-bottom: 50px;
+        display: flex;
+        align-items: center;
+        gap: 20px;
+        justify-content: center;
+      }
     </style>
   </head>
 
@@ -84,6 +112,18 @@
         </div>
         <div class="emojie-parts" id="emojie-parts">Parts</div>
       </section>
+      <h2 class="filters-header">Filters</h2>
+      <form class="filters">
+        <label
+          >Search username: <input name="user-search" id="user-search" />
+        </label>
+        <label
+          >Create on or after:
+          <input name="date-search" id="date-search" type="date"
+        /></label>
+        <button>Filter</button>
+      </form>
+
       <section id="browser" class="browser-grid"></section>
     </main>
     <script type="module" src="resources/scripts/index.js"></script>
