Added upload page and functionality.

--- a/pages/sign-in.html
+++ b/pages/sign-in.html
@@ -11,6 +11,7 @@
       <div class="menu">
         <div>
           <a href="/">Maker</a>
+          <a href="/upload">Upload</a>
         </div>
         <div id="sign-in-section"></div>
       </div>
