--- a/pages/emojie.html
+++ b/pages/emojie.html
@@ -48,6 +48,7 @@
       <div class="menu">
         <div>
           <a href="/">Maker</a>
+          <a href="/upload">Upload</a>
         </div>
         <div id="sign-in-section"></div>
       </div>
