--- a/pages/index.html
+++ b/pages/index.html
@@ -4,88 +4,6 @@
     <meta charset="UTF-8" />
     <title>Emoji Maker</title>
     <link rel="stylesheet" href="/resources/index.css" />
-
-    <style>
-      .maker-grid {
-        margin: 20px;
-        gap: 20px;
-        display: grid;
-        grid-template-columns: 400px auto;
-      }
-
-      .browser-grid {
-        display: grid;
-        grid-template-columns: auto auto auto auto auto;
-        gap: 20px;
-        margin: 20px;
-      }
-
-      .browser-item {
-        cursor: pointer;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        width: fit-content;
-        border: 1px solid black;
-        padding: 8px;
-        border-radius: 5px;
-        transition: background-color 200ms ease-in-out;
-      }
-
-      .browser-item:hover {
-        background-color: aqua;
-      }
-
-      .canvas-container {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        width: 100%;
-        border: 1px solid black;
-      }
-      .canvas {
-        margin: 5px;
-        height: 200px;
-        width: 200px;
-        border: 1px solid black;
-        position: relative;
-      }
-      .canvas img {
-        width: 200px;
-        height: 200px;
-        position: absolute;
-      }
-
-      /* Applied in the javascript */
-      .emojie-part-container {
-        display: flex;
-        gap: 20px;
-      }
-      .emojie-part {
-        display: flex;
-        cursor: pointer;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        padding: 5px;
-        transition: background-color 80ms ease-in-out;
-      }
-      .emojie-part:hover {
-        background-color: aliceblue;
-      }
-
-      .filters-header {
-        text-align: center;
-      }
-
-      .filters {
-        margin-bottom: 50px;
-        display: flex;
-        align-items: center;
-        gap: 20px;
-        justify-content: center;
-      }
-    </style>
   </head>
 
   <body>
@@ -105,14 +23,17 @@
           <div id="canvas" class="canvas"></div>
           <div>
             <!-- submit handled in JavaScript -->
-            <form id="create-emojie">
-              <label>Description <input name="description" /></label>
-              <button>Create emojie</button>
+            <form id="create-emojie" class="form-create-emojie">
+              <label class="label-form-create-emojie"
+                >Description <input name="description"
+              /></label>
+              <button class="btn-form-create-emojie">Create emojie</button>
             </form>
           </div>
         </div>
         <div class="emojie-parts" id="emojie-parts">Parts</div>
       </section>
+
       <h2 class="filters-header">Filters</h2>
       <form class="filters">
         <label
