styling upload form, styling all done

--- a/pages/index.html
+++ b/pages/index.html
@@ -25,7 +25,8 @@
             <!-- submit handled in JavaScript -->
             <form id="create-emojie" class="form-create-emojie">
               <label class="label-form-create-emojie"
-                >Description <input name="description"
+                >Description
+                <input class="input-form-create-emojie" name="description"
               /></label>
               <button class="btn-form-create-emojie">Create emojie</button>
             </form>
