Renamed emoji files

--- a/pages/emoji.html
+++ b/pages/emoji.html
@@ -60,7 +60,7 @@
 
       <section id="emoji-comments"></section>
 
-      <script type="module" src="resources/scripts/emojie.js"></script>
+      <script type="module" src="resources/scripts/emoji.js"></script>
       <script src="resources/scripts/sign-in.js"></script>
     </main>
   </body>
