--- a/pages/upload.html
+++ b/pages/upload.html
@@ -39,7 +39,7 @@
 
       <form class="upload-form" id="upload-form">
         <label class="upload-form-label">
-          Upload emojie part:
+          Upload emoji part:
         <label class="upload-form-label">
           <input 
           class="upload-form-input"
